// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Droppable /> > should not trigger anything when disabled > drag over 1`] = `
<div>
  <p
    class=""
  >
    hello
  </p>
</div>
`;

exports[`<Droppable /> > should render > drag above 1`] = `
<div>
  <p
    class="drag-enter drag-top"
  >
    hello
  </p>
</div>
`;

exports[`<Droppable /> > should render > drag below 1`] = `
<div>
  <p
    class="drag-enter drag-bottom"
  >
    hello
  </p>
</div>
`;

exports[`<Droppable /> > should render > drag entered 1`] = `
<div>
  <p
    class="drag-enter"
  >
    hello
  </p>
</div>
`;

exports[`<Droppable /> > should render > drag leave 1`] = `
<div>
  <p
    class=""
  >
    hello
  </p>
</div>
`;

exports[`<Droppable /> > should render 1`] = `
<div>
  <p
    class=""
  >
    hello
  </p>
</div>
`;

exports[`<Droppable /> > should trigger onDrop event when drop > drag over 1`] = `
<div>
  <p
    class="drag-enter drag-bottom"
  >
    hello
  </p>
</div>
`;
